--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <legend class="center">Summary</legend>
 
               <legend class="center">$HDCORE</legend>
-              <br>Total Supply........: [<span>10000</span>]
+              <br>Total Supply........: [<span>12,000</span>]
               <br>
               <br>Locked Supply.......: [<span id="kore-locked">0.00000</span>]
               <br>
@@ -194,7 +194,7 @@
                                   <legend class="center">HDCORE-ETH LGE</legend>
                                   <br>Time Remaining......: [<span id="countdown">00:00:00:00</span>]
                                   <br>
-                                  <br>Total $HDCORE Supply..: [<span>10000</span>]
+                                  <br>Total $HDCORE Supply..: [<span>12,000</span>]
                                   <br>
                                   <br>ETH Deposited.......: [<span id="total-deposit">0.00000</span>]
                                   <br>
@@ -271,13 +271,13 @@
 
         <div class="tui-statusbar absolute cyan-168">
             <ul>
-                <li><a target="_blank" href="https://twitter.com/kvault_finance"><span class="white-255-text">Twitter</span></a></li>
-                <li><a target="_blank" href="https://medium.com/@KvaultF"><span class="white-255-text">Blog</span></a></li>
-                <li><a target="_blank" href="https://t.me/kore_vault"><span class="white-255-text">Telegram</span></a></li>
-                <li><a target="_blank" href="https://discord.gg/p7uxbzh"><span class="white-255-text">Discord</span></a></li>
-                <li><a target="_blank" href="https://github.com/KORE-Vault"><span class="white-255-text">Github</span></a></li>
-                <li><a target="_blank" href="https://etherscan.io/address/0xA866F0198208Eb07c83081d5136BE7f775c2399e"><span class="white-255-text">Contract</span></a></li>
-                <span class="tui-datetime" data-format="y/M/d H:m:s"></span>
+                <li><a target="_blank" href="https://twitter.com"><span class="white-255-text">Twitter</span></a></li>
+                <li><a target="_blank" href="https://medium.com/"><span class="white-255-text">Blog</span></a></li>
+                <li><a target="_blank" href="https://t.me/"><span class="white-255-text">Telegram</span></a></li>
+                <li><a target="_blank" href="https://discord.gg"><span class="white-255-text">Discord</span></a></li>
+                <li><a target="_blank" href="https://github.com/"><span class="white-255-text">Github</span></a></li>
+                <li><a target="_blank" href="https://etherscan.io/address/0x37e4a8529104Ea82bccEc31EDdc5e373433986c6"><span class="white-255-text">Contract</span></a></li>
+                <span class="tui-datetime" data-format="d/m/y H:m:s"></span>
             </ul>
         </div>
     </div>
