--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body class="tui-bg-purple-black">
     <div class="tui-screen-1024-768 purple-169 centered bordered white-168">
+ 
         <div class="tui-panel purple-169 full-width black-255-text tui-no-shadow center">
             <!-- Focused -->
             <button id="walletconnect" onclick="connect()" class="tui-button white-text purple-168 tui-no-shadow" autofocus>Connect Wallet</button>
@@ -22,7 +23,7 @@
             <ul>
                 <li><a class="tui-tab active" data-tab-content="tab-1-content">$HDCORE</a></li>
                 <li><a class="tui-tab" data-tab-content="tab-2-content">$HDVaults</a></li>
-                <li><a class="tui-tab" data-tab-content="tab-3-content">KZap</a></li>
+                <li><a class="tui-tab" data-tab-content="tab-3-content">HDzap</a></li>
                 <li><a class="tui-tab" data-tab-content="tab-4-content">HDPools</a></li>
                 <li><a class="tui-tab" data-tab-content="tab-5-content">LGE</a></li>
                 <li><a class="tui-tab" data-tab-content="tab-6-content">Governance</a></li>
@@ -212,7 +213,7 @@
 
 
         <div class="tui-tab-content tui-content" id="tab-5-content">
-            <table class="tui-table-grid" >
+            <table class="tui-table-grid"  >
                 <tbody>
                     <tr>
                         <td rowspan="2" width="60%" class="blue-168-text">
@@ -298,12 +299,12 @@
 
         <div class="tui-statusbar absolute purple-167">
             <ul>
-                <li><a target="_blank" href="https://twitter.com"><span class="white-255-text">Twitter</span></a></li>
+                <li><a target="_blank" href="https://twitter.com/HDCOREvaults"><span class="white-255-text">Twitter</span></a></li>
                 <li><a target="_blank" href="https://medium.com/"><span class="white-255-text">Blog</span></a></li>
-                <li><a target="_blank" href="https://t.me/"><span class="white-255-text">Telegram</span></a></li>
-                <li><a target="_blank" href="https://discord.gg"><span class="white-255-text">Discord</span></a></li>
-                <li><a target="_blank" href="https://github.com/"><span class="white-255-text">Github</span></a></li>
-                <li><a target="_blank" href="https://etherscan.io/address/0x37e4a8529104Ea82bccEc31EDdc5e373433986c6"><span class="white-255-text">Contract</span></a></li>
+                <li><a target="_blank" href="https://t.me/HARDCOREVAULTs"><span class="white-255-text">Telegram</span></a></li>
+                <li><a target="_blank" href="https://discord.gg/SUAzMh"><span class="white-255-text">Discord</span></a></li>
+                <li><a target="_blank" href="https://github.com/yieldbase"><span class="white-255-text">Github</span></a></li>
+                <li><a target="_blank" href="https://etherscan.io/token/0x63da3b945e86fe2d1fcaf4eb138474e934e2b94f"><span class="white-255-text">Contract</span></a></li>
                 <span class="tui-datetime white-text" data-format="y/M/d H:m:s a"></span>
             </ul>
         </div>
