--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>HDCORE Vault</title>
-    <link rel="shortcut icon" type="image/ico" href="./dist/images/icon.ico">
+    <link rel="icon" type="image/png" sizes="192x192"  href="./dist/images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./dist/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./dist/images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./dist/images/favicon/favicon-16x16.png">
     <meta name="description" content="HDCORE Vault - Farm without inflation">
     <meta name="keywords" content="HDCORE,vault,yield,finance,defi,ethereum">
 
