--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="tui-scroll-purple">
 <head>
     <meta charset="UTF-8">
     <title>HDCORE Vault</title>
-    <link rel="icon" type="image/png" sizes="192x192"  href="./dist/images/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./dist/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./dist/images/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./dist/images/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="./dist/images/HDCOReLogo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./dist/images/HDCOReLogo.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./dist/images/HDCOReLogo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./dist/images/HDCOReLogo.png">
     <meta name="description" content="HDCORE Vault - Farm without inflation">
     <meta name="keywords" content="HDCORE,vault,yield,finance,defi,ethereum">
 
