--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
               <legend class="center">$HDCORE</legend>
               <br>Total Supply........: [<span>12,000</span>]
               <br>
-              <br>Locked Supply.......: [<span id="kore-locked">0.00000</span>]
+              <br>Locked Supply.......: [<span id="HDcore-locked">0.00000</span>]
               <br>
-              <br>Wallet..............: [<span id="kore-wallet-balance">0.00000</span>]
+              <br>Wallet..............: [<span id="HDCore-wallet-balance">0.00000</span>]
               <a href="#" ><button class="tui-button purple-168 white-text">GET</button></a>
               <br>
-              <br>Claimable...........: [<span id="kore-claimable-balance">0.00000</span>]
+              <br>Claimable...........: [<span id="HDCore-claimable-balance">0.00000</span>]
               <br><br>
 
               <hr class="tui-divider"></hr>   
