--- a/index.html
+++ b/index.html
@@ -262,6 +262,9 @@
                                     <br><br>
                                     <!-- Custom Color -->
                                     <button id="deposit" onclick="deposit()" class="tui-button center">DEPOSIT</button>
+                                    <p style="margin: 10px;" class="nq-notice warning" id="warningDep"></p>
+                                    <p class="nq-notice success" id="depositLGE"></p>
+                                    <p class="nq-notice success" id="successLGE"></p>
                                   </div>
 
                                   <!-- CLAIM LP -->
@@ -315,6 +318,6 @@
 
     <script src="js/metamask-onboarding.bundle.js" defer></script>
     <script src="js/web3.min.js" defer></script>
-    <script src="js/kore.js" defer></script>
+    <script src="js/hdcore.js" defer></script>
 </body>
 </html>
