--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="tui-bg-purple-black">
-    <div class="tui-screen-1024-768 purple-169 centered bordered white-168">
+    <div class="tui-screen-1024-768 purple-169 main centered bordered white-168">
  
         <div class="tui-panel purple-169 full-width black-255-text tui-no-shadow center">
             <!-- Focused -->
